kubernetes/homepage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: homepage
