kubernetes/homepage/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nas.dogeek.me
    cert-manager.io/cluster-issuer: cluster-issuer

spec:
  tls:
  - hosts:
      - nas.dogeek.me
    secretName: homepage-cert-prod
  rules:
  - host: "nas.dogeek.me"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
